--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RemindMeDo">
-        <activity android:name=".signUp"></activity>
+        <activity
+            android:name=".Main"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.RemindMeDo.NoActionBar"></activity>
+        <activity android:name=".signUp" />
         <activity
             android:name=".splashScreen"
             android:label="Remind Me Do">
