--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RemindMeDo">
-
+        <activity android:name=".empty"></activity>
         <activity
             android:name=".newLogOn"
             android:label="@string/app_name">
