--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,28 +11,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RemindMeDo">
         <activity
-            android:name=".Main"
+            android:name=".main"
             android:label="@string/title_activity_main"
-            android:theme="@style/Theme.RemindMeDo.NoActionBar"></activity>
+            android:theme="@style/Theme.RemindMeDo.NoActionBar">
+        </activity>
+
         <activity android:name=".signUp" />
         <activity
             android:name=".splashScreen"
             android:label="Remind Me Do">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
+
         <activity
             android:name=".newLogOn"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".empty"
+            android:label="Remind Me Do"
+            />
     </application>
 
 </manifest>
