--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RemindMeDo">
+
+        <meta-data
+            android:name=".com.google.android.geo.API.KEY"
+            android:value="${mapsApiKey}" />
         <activity
             android:name=".main"
-            android:label="@string/title_activity_main"
+            android:label="@string/app_name"
             android:theme="@style/Theme.RemindMeDo.NoActionBar">
+
         </activity>
 
         <activity android:name=".signUp" />
         <activity
             android:name=".splashScreen"
-            android:label="Remind Me Do">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -34,7 +39,7 @@
 
         <activity
             android:name=".empty"
-            android:label="Remind Me Do"
+            android:label="@string/app_name"
             />
     </application>
 
